--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <!-- code a footer -->
   <div class="container">
   <div class="footer">
-    <i class="fab fa-instagram"></i>
-    <i class="fab fa-facebook-square"></i>
-    <i class="fab fa-twitter-square"></i>
+    <a href=""><i class="fab fa-instagram"></i></a>
+    <a href=""><i class="fab fa-facebook-square"></i></a>
+    <a href=""><i class="fab fa-twitter-square"></i></a>
   </div>
   </div>
 </body>
